--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <title>Easy Grammar</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
     <!--
